--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -291,6 +291,10 @@ input[type="submit"].fb {
   background-color: #3b5998;
   border-color: #3b5998;
 }
+input[type="submit"].green {
+  background-color: #58d45b;
+  border: 1px solid #58d45b;
+}
 
 /*
  * Symbols and badges
