--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,418 +1,2 @@
 @import "../bower/bootstrap/less/bootstrap";
-
-/*
- * Timetorun.se
- * Version 1.0
- */
-
-/* General Demo Style */
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,500,700,900);
-
-* {
-  box-sizing: border-box;
-}
-html, body {
-  height: 100%;
-  margin: 0;
-}
-body {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: #111;
-}
-
-h2 {
-  font-weight: 400;
-}
-h1.big, h2.big {
-  font-size: 400%;
-  font-size: 5vw;
-  font-weight: 900;
-  margin: 4px;
-  letter-spacing: -1px;
-}
-h2.large {
-  font-size: 300%;
-
-  font-weight: 900;
-  margin: 4px;
-  letter-spacing: -1px;
-}
-h3 {
-}
-p {
-}
-.medium {
-  font-weight: 700;
-}
-.small {
-  font-size: 90%;
-}
-.gray {
-  color: gray;
-}
-a {
-  color: #2395ff;
-  transition: color .2s linear;
-  -webkit-transition: color .2s linear;
-  -moz-transition: color .2s linear;
-}
-a:hover, a:active {
-  color: #008aff;
-  text-decoration: none;
-}
-.text-title {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-.text-center {
-  text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.height-full {
-  height: 100%;
-}
-.table {
-  display: table;
-  height: 100%;
-  width: 100%;
-}
-.table-cell {
-  display: table-cell;
-  vertical-align: middle;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-}
-
-/*
- * Splash
- */
-.splash {
-  background: url('../images/unsplash1.jpg');
-  background-position: center center;
-  background-size: cover;
-  height: 85%;
-}
-.splash h1 {
-  font-size: 700%;
-  font-size: 10vw;
-  line-height: 1.2;
-  font-weight: 900;
-  margin: 4px;
-  letter-spacing: -3px;
-  color: #fff716;
-}
-.splash h2 {
-  font-size: 400%;
-  font-size: 4vw;
-  line-height: 1.2;
-  font-weight: 700;
-  margin: 4px;
-  letter-spacing: -2px;
-  color: #fff;
-}
-
-
-/*
- * Header and topnavigation
- */
-header {
-  position: absolute;
-  z-index: 5000;
-  top: 0;
-  right: 0;
-  left: 0;
-  padding: 0;
-  color: white;
-  background: #51565d;
-  background: rgba(0,0,0,.0);
-}
-.logo  {
-  float: left;
-  padding: 11px 0 0;
-}
-.logo-animated {
-  float: left;
-  padding: 17px 0 0;
-}
-.topnav {
-  height: 80px;
-  display: none;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  background: rgba(255,255,255,.97);
-  z-index: 6000;
-}
-.topnav-subpage {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 15px 0;
-  background: rgba(255,255,255,.9);
-  z-index: 6000;
-  color: white;
-  background: -webkit-linear-gradient(left, #1a439f , #ab2c94); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, #1a439f, #ab2c94); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, #1a439f, #ab2c94); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, #1a439f , #ab2c94); /* Standard syntax */
-}
-.topnav-light {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 0;
-  background: rgba(255,255,255,.9);
-  z-index: 6000;
-}
-.topnav-light-border {
-  height: 1px;
-  background: -webkit-linear-gradient(left, #1a439f , #ab2c94); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, #1a439f, #ab2c94); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, #1a439f, #ab2c94); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, #1a439f , #ab2c94); /* Standard syntax */
-
-}
-
-
-/*
- * Search and list items
- */
-.search-container {
-  padding-bottom: 40px;
-}
-.search-box {
-  position: relative;
-}
-.search-icon {
-  position: absolute;
-  top: 18px;
-  left: 20px;
-}
-.search-field {
-  padding-left: 46px !important;
-}
-.search-clear {
-  display: none;
-  position: absolute;
-  top: 18px;
-  right: 20px;
-  color: #2395ff;
-}
-.search-box:hover .search-clear {
-  display: block;
-}
-.list-item {
-  border-top: 1px solid #ededed;
-  padding: 20px 0;
-  cursor: pointer;
-}
-.list-item a {
-  color: #111;
-}
-.list-btn {
-  background: #008aff;
-  padding: 10px 14px;
-  color: #fff !important;
-  font-size: 80%;
-  font-weight: 700;
-  transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-  -moz-transition: all .3s ease;
-}
-.list-btn:hover {
-  background: #0073d4;
-  color: #fff;
-  border-radius: 0px;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-}
-
-
-/*
- * Footer
- */
-footer {
-  color: #999;
-  padding: 60px 0;
-  background: #f2f2f2;
-}
-footer a {
-  color: #999;
-}
-footer ul {
-  list-style: none;
-  padding: 0;
-  margin: 20px 0;
-  font-weight: 700;
-}
-footer li {
-  padding-bottom: 4px;
-}
-
-/* Divs and blocks
- --------------------------------------------- */
-.center {
-  float: none;
-  margin: auto;
-}
-.block-top {
-  padding: 120px 0 60px;
-}
-.container-border-bottom {
-  border-bottom: 1px solid #ededed;
-}
-
-
-/* Form and inputs
- --------------------------------------------- */
-input[type="text"], input[type="password"] {
-  display: block;
-  width: 100%;
-  font-weight: 700;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  padding: 15px 25px;
-  background-color: #fff;
-  -webkit-appearance: none;
-}
-input[type="text"]:focus, input[type="password"]:focus {
-  background-color: #ededed;
-  border-color: #ededed;
-  -webkit-appearance: none;
-  outline-width: 0;
-}
-input[type="submit"] {
-  color: white;
-  display: block;
-  font-weight: 700;
-  width: 100%;
-  background-color: #008aff;
-  border: 1px solid #008aff;
-  padding: 15px 35px;
-  margin: 0;
-  transition: all .2s ease;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  -webkit-appearance: none;
-}
-input[type="submit"]:hover {
-  background-color: #0073d4;
-  border: 1px solid #0073d4;
-}
-input.green[type="submit"] {
-  color: white;
-  display: block;
-  font-weight: 700;
-  width: 100%;
-  background-color: #58d45b;
-  border: 1px solid #58d45b;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  padding: 15px 35px;
-  margin: 0;
-  transition: all .2s ease;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  -webkit-appearance: none;
-}
-input.green[type="submit"]:hover {
-  background-color: #4dca50;
-  border: 1px solid #4dca50;
-}
-input[type="submit"].fb {
-  background-color: #3b5998;
-  border-color: #3b5998;
-}
-.form-error {
-  border: 1px solid red !important;
-}
-section button {
-  border: none;
-  background: transparent;
-  color: #00b5f8;
-  padding: 0;
-  display: block;
-  cursor: pointer;
-  margin: 0;
-  margin-left: -15px;
-  margin-right: 10px;
-  font-weight: 700;
-  font-size: 130%;
-  padding: 22px 30px 25px 30px;
-  float: left;
-}
-section button:hover {
-  background: transparent;
-}
-section button.active {
-  background: #00b5f8;
-  color: #fff;
-}
-section button.disabled {
-  background: transparent;
-  pointer-events: none;
-}
-
-/*
- * Symbols and badges
- */
-.social-badge {
-  background-color: #ccc;
-  color: white;
-  text-align: center;
-  height: 44px;
-  width: 44px;
-  display: inline-block;
-  padding-top: 13px;
-  font-size: 120%;
-  transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-  -moz-transition: all .3s ease;
-}
-.social-badge:hover {
-  background-color: #008aff;
-  color: white;
-  border-radius: 0px;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-}
-
-
-/*
- * Upsells
- */
-.product-label {
-  background: rgba(0,186,255,.92);
-  color: white;
-  padding: 6px 10px;
-  display: block;
-  float: left;
-}
-.product-pricetag {
-  background-color: #69e16c;
-  color: white;
-  padding: 5px 10px 8px;
-  font-weight: 700;
-  display: block;
-  float: left;
-}
-
-/*
- * Mobile
- */
-@media screen and (max-width: 990px) {
-  .hide-mobile {
-    display: none;
-  }
-}
+@import "../css/style.css";
