--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -396,6 +396,9 @@ section button.disabled {
     p {
     	font-size: 100%;
     }
+    .splash {
+    	height: 90%;
+    }
     .splash h1 {
     	font-size: 300%;
     }
