--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -205,20 +205,21 @@ header {
 }
 .list-btn {
 	opacity: 0;
-    background: #008aff;
+    background: #111;
     padding: 10px 14px;
     color: #fff !important;
     font-size: 80%;
     font-weight: 700;
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
+    transition: background .3s ease;
+    -webkit-transition: background .3s ease;
+    -moz-transition: background .3s ease;
+    cursor: pointer;
 }
 .list-item:hover .list-btn {
 	opacity: 1;
 }
 .list-btn:hover {
-    background: #0077e0;
+    background: #222;
     color: #fff;
     border-radius: 0px;
     -webkit-border-radius: 0px;
@@ -437,9 +438,15 @@ section button.disabled {
     .single {
 	    font-size: 120%;
     }
+    .list-btn {
+	    opacity: 1;
+    }
 }
 @media screen and (max-width: 990px) {
     .hide-mobile {
         display: none;
+    }
+    .list-btn {
+	    opacity: 1;
     }
 }
