--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -210,12 +210,12 @@ header {
     width: 36px;
     height: 36px;
     display: block;
-    color: #111 !important;
+    color: #ddd !important;
     font-size: 80%;
     font-weight: 700;
-    transition: border .3s ease;
-    -webkit-transition: border .3s ease;
-    -moz-transition: border .3s ease;
+    transition: all .1s ease;
+    -webkit-transition: all .1s ease;
+    -moz-transition: all .1s ease;
     cursor: pointer;
     float: right;
     margin-top: -6px;
@@ -223,6 +223,7 @@ header {
 }
 .list-item:hover .list-btn {
 	border: 2px solid #111;
+	color: #111 !important;
 }
 
 /* 
