--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -111,16 +111,16 @@ a:hover, a:active {
 .splash h1 {
     font-size: 760%;
     /*font-size: 10vw;*/
-    line-height: 1.2;
+    line-height: 1;
     font-weight: 700;
-    margin: 4px;
+    margin: 0 0 15px;
     letter-spacing: -4px;
     color: #fff716;
     color: #4f287a;
     color: #fff;
 }
 .splash h2 {
-    font-size: 250%;
+    font-size: 200%;
     /*font-size: 4vw;*/
     line-height: 1.2;
     font-weight: 700;
@@ -132,6 +132,8 @@ a:hover, a:active {
 	background: #0087ff;
 	color: white;
 	padding: 10px 25px;
+	display: inline-block;
+	margin: 7px;
 }
 
 /* 
@@ -460,10 +462,10 @@ section button.disabled {
     	height: 90%;
     }
     .splash h1 {
-    	font-size: 300%;
+    	font-size: 280%;
     }
     .splash h2 {
-    	font-size: 160%;
+    	font-size: 120%;
     }
     h1.big, h2.big {
     	font-size: 200%;
@@ -476,6 +478,10 @@ section button.disabled {
     }
     .list-btn {
 	    opacity: 1;
+    }
+    .block {
+	    padding-top: 60px;
+	    padding-bottom: 60px;
     }
 }
 @media screen and (max-width: 990px) {
