--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -421,6 +421,28 @@ section button.disabled {
     -moz-border-radius: 0px;
 }
 
+/*
+ * Loading icon
+ */
+#paginateSpinner {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-size: 150px;
+    text-align: center;
+    z-index: 100;
+    background: rgba(0,0,0,.25);
+}
+#paginateSpinner .fa {
+    position: relative;
+    top: 50%;
+    margin-top: -150px;
+    display: block;
+    color: #FFFFFF;
+}
+
 
 /*
  * Upsells
