--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -40,9 +40,6 @@ body {
 .block {
     padding: 100px;
 }
-.block-top {
-    padding-top: 80px;
-}
 .block-center {
     float: none;
     margin: auto;
@@ -67,6 +64,9 @@ body {
 .bg-purple {
     background: #282b49;
     color: #fff;
+}
+.bg-yellow {
+	background: #eef362;
 }
 
 
@@ -154,43 +154,53 @@ a:hover, a:active {
 }
 
 /* 
- * Splash
+ * Canvas
+ *
  */
-.splash {
+.canvas {
     background: url('/images/unsplash-green.jpg');
     background-position: center center;
     background-size: cover;
-    height: 76%;
+    height: 68%;
 }
-.splash h1 {
-    font-size: 760%;
-    /*font-size: 10vw;*/
-    line-height: 1;
-    font-weight: 700;
-    margin: 0 0 15px;
-    letter-spacing: -4px;
-    color: #fff716;
-    color: #4f287a;
-    color: #fff;
-}
-.splash h2 {
-    font-size: 200%;
-    /*font-size: 4vw;*/
-    line-height: 1.2;
-    font-weight: 700;
-    margin: 4px;
-    letter-spacing: 0px;
-    color: #fff;
-}
-.splash a.promo-link {
-	background: #0087ff;
-	color: white;
-	padding: 10px 25px;
-	display: inline-block;
-	margin-top: 40px; 
+.canvas span {
+	font-size: 580%;
 	font-weight: 700;
+	letter-spacing: -4px;
+	color: white;
+	display: inline-block;
+	background: #69e16c;
+	padding: 10px 25px;
+}
+.canvas span.title {
+	padding-bottom: 0;
+	margin-bottom: -25px;
 }
 
+
+/* 
+ * Buttons
+ *
+ */
+.click {
+	padding: 15px 25px;
+	display: inline-block;
+	font-weight: 700;
+	transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+}
+.click-blue {
+	background: #0087ff;
+	color: white;
+}
+.click-blue:hover {
+	background: #0073e6;
+	color: white;
+}
+ 
+ 
+ 
 /* 
  * Header and topnavigation
  */
@@ -240,11 +250,7 @@ header .search-topnav:focus {
 .topnav {
 	display: none;
 	position: fixed;
-	top: 0;
 	width: 100%;
-	padding: 0;
-	margin: 0;
-	background: rgba(255,255,255,.97);
 	z-index: 6000;
 }
 
@@ -311,6 +317,11 @@ header .search-topnav:focus {
 }
 .list-item:hover a {
 	color: #0087ff;
+}
+.show-more {
+	margin-top: 40px;
+	border: 0;
+	-webkit-appearance: none;
 }
 
 /* 
@@ -495,6 +506,7 @@ section button.disabled {
     background: rgba(17,17,17,.92);
     background: rgba(255,255,255,.92);
     background: rgba(0,135,255,.92);
+    background: rgba(26,66,159,.92);
     color: #0087ff;
     color: white;
     font-weight: 700;
@@ -533,15 +545,12 @@ section button.disabled {
     p {
     	font-size: 100%;
     }
-    .splash {
-    	height: 90%;
+    .canvas {
+    	height: 70%;
     }
-    .splash h1 {
-    	font-size: 260%;
+    .canvas span {
+    	font-size: 320%;
     	letter-spacing: -2px;
-    }
-    .splash h2 {
-    	font-size: 120%;
     }
     h1.big, h2.big {
     	font-size: 200%;
