--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -122,7 +122,7 @@ a {
     -moz-transition: color .2s linear;
 }
 a:hover, a:active {
-    color: #1a429f;
+    color: #0073e6;
     text-decoration: none;
 }
 .text-title {
@@ -169,7 +169,7 @@ a:hover, a:active {
 	letter-spacing: -4px;
 	color: white;
 	display: inline-block;
-	background: #69e16c;
+	background: #0087ff;
 	padding: 10px 25px;
 }
 .canvas span.title {
@@ -198,6 +198,22 @@ a:hover, a:active {
 	background: #0073e6;
 	color: white;
 }
+.click-green {
+	background: #5ce060;
+	color: white;
+}
+.click-green:hover {
+	background: #5ce060;
+	color: white;
+}
+.click-black {
+	background: #111;
+	color: white;
+}
+.click-black:hover {
+	background: #111;
+	color: white;
+}
  
  
  
@@ -213,6 +229,17 @@ header .logo {
 	padding-right: 10px;
 	height: 38px;
 	margin-left: 20px;
+}
+header a.login {
+	color: white;
+	background: #0087ff;
+	background: #111;
+	background: #5ce060;
+	padding: 0 25px;
+	font-weight: 700;
+	display: inline-block;
+	margin-right: -15px;
+	height: 100%;
 }
 header a.link-topnav {
 	opacity: 1;
@@ -502,11 +529,13 @@ section button.disabled {
  * Upsells
  */
 .product-label {
+	background: rgba(0,135,255,.92);
+	background: rgba(26,66,159,.92);
+	background: rgba(255,255,255,.92);
+	background: rgba(17,17,17,.92);
     background: rgba(70,40,122,.92);
-    background: rgba(17,17,17,.92);
-    background: rgba(255,255,255,.92);
-    background: rgba(0,135,255,.92);
-    background: rgba(26,66,159,.92);
+    
+    
     color: #0087ff;
     color: white;
     font-weight: 700;
@@ -515,7 +544,8 @@ section button.disabled {
     float: left;
 }
 .product-pricetag {
-    background-color: rgba(105,225,108,.94);
+    background: rgba(105,225,108,.94);
+    background: rgba(70,40,122,.92);
     color: white;
     padding: 5px 15px 8px;
     font-weight: 700;
@@ -523,13 +553,8 @@ section button.disabled {
     float: left;
 }
 .product-pricetag-shop {
-	background: rgba(0,135,255,.92);
-	background: rgba(17,17,17,.92);
-	color: white;
-	padding: 10px 15px 10px;
 	display: block;
 	float: left;
-	font-weight: 700;
 } 
 .single {
 	font-size: 180%;
@@ -567,7 +592,7 @@ section button.disabled {
     	height: 70%;
     }
     .canvas span {
-    	font-size: 300%;
+    	font-size: 280%;
     	letter-spacing: -2px;
     }
     h1.big, h2.big {
