css mobile fonts

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -262,6 +262,7 @@ header a.login {
 }
 header a.logout {
     background: #ff0000;
+
 }
 header a.link-topnav {
 	opacity: 1;
@@ -614,7 +615,7 @@ section button.disabled {
     	height: 70%;
     }
     .canvas span {
-    	font-size: 280%;
+    	font-size: 220%;
     	letter-spacing: -2px;
     }
     h1.big, h2.big {
@@ -622,6 +623,9 @@ section button.disabled {
     }
     h2.large {
     	font-size: 170%;
+    }
+    h3.large {
+	    font-size: 170%;
     }
     .single {
 	    font-size: 120%;
