--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -246,6 +246,7 @@ header a.auth {
     display: inline-block;
     margin-right: -15px;
     height: 100%;
+    outline: 0;
 }
 header a.auth:hover a.logout {
     display: block;
@@ -265,7 +266,7 @@ header a.login {
 }
 header a.logout {
 	display: none;
-    background: rgba()255,255,255,.95;
+    background: rgba(255,255,255,.95);
 }
 header a.login:hover {
 	text-decoration: none;
