--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -248,7 +248,7 @@ header a.auth {
     height: 100%;
     outline: 0;
 }
-header a.auth:hover a.logout {
+header a.auth:hover > a.logout {
     display: block;
 }
 header a.login {
@@ -266,6 +266,8 @@ header a.login {
 }
 header a.logout {
 	display: none;
+	margin-top: -5px;
+	font-weight: 500 !important;
     background: rgba(255,255,255,.95);
 }
 header a.login:hover {
