--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -248,9 +248,6 @@ header a.auth {
     height: 100%;
     outline: 0;
 }
-header a.auth:hover > a.logout {
-    display: block;
-}
 header a.login {
     color: white;
     background: #0087ff;
@@ -272,6 +269,9 @@ header a.logout {
 }
 header a.login:hover {
 	text-decoration: none;
+}
+header a.auth:hover > header a.logout {
+    display: block;
 }
 header a.link-topnav {
 	opacity: 1;
