--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -270,6 +270,10 @@ header .user-menu {
 header .user:hover + .user-menu {
     display: block;
 }
+.user-menu:hover {
+    display: block;
+}
+
 header a.logout {
 	
 }
