--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -267,15 +267,13 @@ header .user {
 header .user-menu {
 	display: none;
 }
-header .user:hover + .user-menu {
+header .user:hover + .user-menu, 
+header .user-menu:hover {
     display: block;
-}
-.user-menu:hover {
-    display: block;
+    background: rgba(255,255,255,.95);
 }
 header a.logout {
 	font-weight: 500;
-	background: rgba(255,255,255,.95);
 }
 header a.link-topnav {
 	opacity: 1;
