--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -233,6 +233,18 @@ a.click-black:hover {
 header {
     color: white;
 }
+.header-default {
+	height: 82px;
+}
+.header-scroll {
+	height: 62px;
+}
+.header-default {
+	background: white;
+}
+.header-scroll {
+	background: rgba(255,255,255,.97);
+}
 header .logo {
 	cursor: pointer;
 	border: 0;
@@ -274,6 +286,7 @@ header .user-menu:hover {
 header a.logout {
 	font-weight: 500;
 	padding: 15px 25px;
+	margin: 0;
 	background: rgba(255,255,255,.95);
 }
 header a.link-topnav {
