--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -281,6 +281,7 @@ header .user-menu {
 }
 header .user-menu-container {
 	font-weight: 500;
+	text-align: left;
 	padding: 15px 25px;
 	margin: 0;
 	background: rgba(255,255,255,.95);
