--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -266,9 +266,8 @@ header span.auth {
     text-decoration: none;
     cursor: pointer;
 }
-header span.auth {
+header span.auth:hover {
     color: #0073e6;
-}
 }
 header a.login {
     color: white;
@@ -285,9 +284,11 @@ header a.login {
 }
 header .user {
 	height: 100%;
+	display: inline-block;
 }
 header .user-menu {
 	display: none;
+	margin-top: -5px;
 }
 header .user-menu-container {
 	display: inline-block;
