--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #111;
-    background: #ededed;
+    background: #293d6c;
     /*
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -192,7 +192,8 @@ a:hover, a:active {
  * Buttons
  *
  */
-a.click {
+a.click,
+.click {
 	padding: 15px 25px;
 	display: inline-block;
 	font-weight: 700;
@@ -596,6 +597,7 @@ section button.disabled {
 
 /*
  * Upsells
+ *
  */
 .product-label {
 	background: rgba(0,135,255,.92);
@@ -603,8 +605,6 @@ section button.disabled {
 	background: rgba(255,255,255,.92);
 	background: rgba(17,17,17,.92);
     background: rgba(70,40,122,.92);
-    
-    
     color: #0087ff;
     color: white;
     font-weight: 700;
@@ -627,11 +627,18 @@ section button.disabled {
 } 
 .single {
 	font-size: 180%;
+}
+.upsells-slider { 
+	position: relative; overflow: auto;
+}
+.upsells-slider li {
+	list-style: none;
+}
+.upsells-slider ul li {
+	float: left;
 } 
 
 
-
- 
 
 
 /* 
