--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -114,6 +114,9 @@ p {
 .gray {
     color: gray;
 }
+.purple {
+	color: #4f287a;
+}
 a:link, a:visited {
     color: #0087ff;
     transition: color .2s linear;
@@ -162,7 +165,8 @@ a:hover, a:active {
     background-size: cover;
     height: 68%;
 }
-.canvas span {
+.canvas span,
+.canvas h1 {
 	font-size: 450%;
 	font-weight: 700;
 	letter-spacing: -4px;
@@ -171,7 +175,8 @@ a:hover, a:active {
 	background: #1a429f;
 	padding: 10px 25px;
 }
-.canvas span.title {
+.canvas span.title,
+.canvas h1.title {
 	padding-bottom: 0;
 	margin-bottom: -25px;
 	position: relative;
@@ -665,7 +670,7 @@ section button.disabled {
 		padding: 40px;
 	}
     .hide-mobile {
-        display: none;
+        display: none !important;
     }
     .list-btn {
 	    opacity: 1;
@@ -682,7 +687,8 @@ section button.disabled {
     .canvas {
     	height: 70%;
     }
-    .canvas span {
+    .canvas span,
+    .canvas h1 {
     	font-size: 220%;
     	letter-spacing: -2px;
     }
